--- a/less/sht.less
+++ b/less/sht.less
@@ -1,6 +1,6 @@
 // out: ../css/sht.css, compress: true, autoprefixer: defaults
 html, body {
-    // overflow-x: hidden;
+    overflow-x: hidden;
     position: relative;
 }
 main {
